--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background-color: #87CEEB; /* Sky blue */
+            font-family: Arial, sans-serif;
         }
 
         #game {
@@ -16,7 +16,9 @@
             width: 800px;
             height: 400px;
             border: 2px solid #000;
-            background-color: #5C94FC; /* Game background color */
+            background: url('background1.jpg') no-repeat center center; /* Background image for level 1 */
+            background-size: cover;
+            overflow: hidden;
         }
 
         #player {
@@ -26,7 +28,7 @@
             position: absolute;
             bottom: 100px; /* Starting position above ground */
             left: 50px;
-            transition: left 0.1s; /* Smooth movement */
+            transition: left 0.1s;
         }
 
         .ground, .platform {
@@ -43,7 +45,7 @@
         .enemy {
             width: 40px;
             height: 40px;
-            background-color: #0000FF; /* Enemy color */
+            background-color: #0000FF; /* Default enemy color */
             position: absolute;
             bottom: 100px;
             transition: left 0.1s;
@@ -57,12 +59,36 @@
             bottom: 120px; /* Above ground */
         }
 
-        #score {
+        #score, #lives, #level {
             position: absolute;
             top: 10px;
-            left: 10px;
             font-size: 24px;
-            color: #FFFFFF; /* Score text color */
+            color: #FFFFFF; /* Text color */
+        }
+
+        #lives {
+            right: 10px;
+        }
+
+        #level {
+            left: 10px;
+        }
+
+        #menu {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: none;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        #menu button {
+            padding: 10px 20px;
+            font-size: 16px;
         }
     </style>
 </head>
@@ -73,29 +99,73 @@
         <div class="platform" style="width: 150px; bottom: 200px; left: 300px;"></div>
         <div class="platform" style="width: 100px; bottom: 300px; left: 600px;"></div>
         <div id="score">Score: 0</div>
+        <div id="lives">Lives: 3</div>
+        <div id="level">Level: 1</div>
+        <div id="menu">
+            <h1>Mario-like Game</h1>
+            <button onclick="startGame()">Start Game</button>
+        </div>
     </div>
+    <audio id="jumpSound" src="jump.mp3"></audio>
+    <audio id="collectSound" src="collect.mp3"></audio>
+    <audio id="gameOverSound" src="gameover.mp3"></audio>
+
     <script>
         const player = document.getElementById('player');
         const gameArea = document.getElementById('game');
         const scoreDisplay = document.getElementById('score');
+        const livesDisplay = document.getElementById('lives');
+        const levelDisplay = document.getElementById('level');
+        const menu = document.getElementById('menu');
+        const jumpSound = document.getElementById('jumpSound');
+        const collectSound = document.getElementById('collectSound');
+        const gameOverSound = document.getElementById('gameOverSound');
 
         let isJumping = false;
         let jumpHeight = 0;
         let gravity = 5;
         let playerBottom = 100;
         let score = 0;
+        let lives = 3;
         let gameOver = false;
+        let level = 1;
+
+        // Start game function
+        function startGame() {
+            score = 0;
+            lives = 3;
+            level = 1;
+            gameOver = false;
+            scoreDisplay.innerText = `Score: ${score}`;
+            livesDisplay.innerText = `Lives: ${lives}`;
+            levelDisplay.innerText = `Level: ${level}`;
+            menu.style.display = 'none';
+            resetGame();
+            createEnemies();
+            createCollectibles();
+        }
+
+        // Reset game state
+        function resetGame() {
+            player.style.left = '50px';
+            player.style.bottom = '100px';
+            playerBottom = 100;
+            document.querySelectorAll('.enemy').forEach(enemy => enemy.remove());
+            document.querySelectorAll('.collectible').forEach(collectible => collectible.remove());
+            gameArea.style.backgroundImage = `url('background${level}.jpg')`; // Change background based on level
+        }
 
         // Create enemies
-        const enemies = [];
-        function createEnemy() {
-            const enemy = document.createElement('div');
-            enemy.classList.add('enemy');
-            enemy.style.left = '800px'; // Start off screen
-            enemy.style.bottom = '100px';
-            gameArea.appendChild(enemy);
-            enemies.push(enemy);
-            moveEnemy(enemy);
+        function createEnemies() {
+            setInterval(() => {
+                if (gameOver) return;
+                const enemy = document.createElement('div');
+                enemy.classList.add('enemy');
+                enemy.style.left = '800px'; // Start off screen
+                enemy.style.bottom = Math.random() * (gameArea.clientHeight - 120) + 80 + 'px'; // Random vertical position
+                gameArea.appendChild(enemy);
+                moveEnemy(enemy);
+            }, 2000); // Create enemy every 2 seconds
         }
 
         function moveEnemy(enemy) {
@@ -110,21 +180,22 @@
                 if (left < -40) {
                     clearInterval(enemyInterval);
                     gameArea.removeChild(enemy);
-                    enemies.splice(enemies.indexOf(enemy), 1);
-                    createEnemy(); // Respawn enemy
                 }
                 checkCollision(enemy);
             }, 20);
         }
 
         // Create collectibles
-        function createCollectible() {
-            const collectible = document.createElement('div');
-            collectible.classList.add('collectible');
-            collectible.style.left = Math.random() * (gameArea.clientWidth - 20) + 'px';
-            collectible.style.bottom = Math.random() * (gameArea.clientHeight - 120) + 80 + 'px'; // Above ground
-            gameArea.appendChild(collectible);
-            checkCollectible(collectible);
+        function createCollectibles() {
+            setInterval(() => {
+                if (gameOver) return;
+                const collectible = document.createElement('div');
+                collectible.classList.add('collectible');
+                collectible.style.left = Math.random() * (gameArea.clientWidth - 20) + 'px';
+                collectible.style.bottom = Math.random() * (gameArea.clientHeight - 120) + 80 + 'px'; // Above ground
+                gameArea.appendChild(collectible);
+                checkCollectible(collectible);
+            }, 5000); // Create collectible every 5 seconds
         }
 
         function checkCollectible(collectible) {
@@ -138,9 +209,9 @@
                         playerRect.y + playerRect.height > collectibleRect.y) {
                         score += 10; // Increase score
                         scoreDisplay.innerText = `Score: ${score}`;
+                        collectSound.play(); // Play collect sound
                         gameArea.removeChild(collectible);
                         clearInterval(collectibleInterval);
-                        createCollectible(); // Respawn collectible
                     }
                 } else {
                     clearInterval(collectibleInterval);
@@ -156,9 +227,19 @@
                 playerRect.x + playerRect.width > enemyRect.x &&
                 playerRect.y < enemyRect.y + enemyRect.height &&
                 playerRect.y + playerRect.height > enemyRect.y) {
+                loseLife();
+            }
+        }
+
+        function loseLife() {
+            lives--;
+            livesDisplay.innerText = `Lives: ${lives}`;
+            if (lives <= 0) {
                 gameOver = true;
+                gameOverSound.play(); // Play game over sound
                 alert('Game Over! Your score: ' + score);
-                window.location.reload(); // Restart game
+                menu.style.display = 'block';
+                resetGame();
             }
         }
 
@@ -188,6 +269,7 @@
 
         function jump() {
             isJumping = true;
+            jumpSound.play(); // Play jump sound
             let jumpInterval = setInterval(() => {
                 if (jumpHeight >= 100) {
                     clearInterval(jumpInterval);
@@ -215,9 +297,22 @@
             }, 20);
         }
 
-        // Start the game loop
-        setInterval(createEnemy, 2000); // Create enemy every 2 seconds
-        setInterval(createCollectible, 5000); // Create collectible every 5 seconds
+        // Level transition
+        function nextLevel() {
+            level++;
+            if (level > 3) {
+                level = 1; // Loop back to level 1
+            }
+            levelDisplay.innerText = `Level: ${level}`;
+            resetGame();
+            createEnemies();
+            createCollectibles();
+        }
+
+        // Show menu on load
+        window.onload = () => {
+            menu.style.display = 'block';
+        };
     </script>
 </body>
 </html>
