--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -56,10 +56,10 @@
             box-shadow: 0 0 15px rgba(0, 204, 255, 0.8); /* Enhanced glow */
         }
         .glitch {
-            animation: glitch 1s infinite; /* Glitch animation for title */
+            animation: glitch-title 1s infinite; /* Glitch animation for title */
         }
         .glitch-textarea {
-            animation: glitch 1s infinite; /* Glitch animation for text areas */
+            animation: glitch-textarea 0.5s infinite; /* Enhanced glitch animation for text areas */
         }
         input[type=button] {
             padding: 12px 20px;
@@ -85,13 +85,31 @@
             padding-left: 15px;
             text-align: left;
         }
-        @keyframes glitch {
+        @keyframes glitch-title {
             0% { opacity: 1; transform: translate(0); }
-            20% { opacity: 0.8; transform: translate(-2px, -2px); }
+            10% { opacity: 0.8; transform: translate(-2px, -2px); }
+            20% { opacity: 1; transform: translate(2px, -2px); }
+            30% { opacity: 0.9; transform: translate(-2px, 2px); }
             40% { opacity: 1; transform: translate(2px, 2px); }
-            60% { opacity: 0.8; transform: translate(-2px, -2px); }
-            80% { opacity: 1; transform: translate(2px, 2px); }
+            50% { opacity: 0.7; transform: translate(-2px, 0); }
+            60% { opacity: 1; transform: translate(0, -2px); }
+            70% { opacity: 0.9; transform: translate(2px, 2px); }
+            80% { opacity: 1; transform: translate(-2px, -2px); }
+            90% { opacity: 0.8; transform: translate(0); }
             100% { opacity: 1; transform: translate(0); }
+        }
+        @keyframes glitch-textarea {
+            0% { opacity: 1; }
+            10% { opacity: 0.9; transform: skewX(-1deg); }
+            20% { opacity: 0.8; transform: skewX(1deg); }
+            30% { opacity: 0.9; transform: skewX(-2deg); }
+            40% { opacity: 0.8; }
+            50% { opacity: 1; }
+            60% { opacity: 0.8; transform: skewX(2deg); }
+            70% { opacity: 0.9; transform: skewX(-1deg); }
+            80% { opacity: 0.8; }
+            90% { opacity: 0.9; transform: skewX(1deg); }
+            100% { opacity: 1; }
         }
     </style>
 </head>
