--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -29,9 +29,9 @@
         }
         h1 {
             font-family: 'Orbitron', sans-serif; /* Futuristic font */
-            color: #00ffcc; /* Neon teal color */
+            color: #00ff00; /* Neon green color */
             margin-bottom: 30px;
-            text-shadow: 0 0 20px #00ffcc; /* Glowing text effect */
+            text-shadow: 0 0 20px #00ff00; /* Glowing green text effect */
             font-size: 2.5em;
         }
         textarea {
@@ -39,21 +39,21 @@
             height: 100px; /* Increased height for better visibility */
             font-size: 18px;
             padding: 10px;
-            border: 2px solid #00ffcc; /* Light teal border */
+            border: 2px solid #00ff00; /* Light green border */
             border-radius: 5px;
-            color: #00ff00;
+            color: #00ff00; /* Green text color */
             background-color: #1b1b1b; /* Very dark background for contrast */
-            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); /* Teal glow effect */
+            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5); /* Green glow effect */
             transition: border-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
             resize: none; /* Disable resize */
         }
         textarea::placeholder {
-            color: rgba(0, 255, 204, 0.7); /* Dimmed placeholder color */
+            color: rgba(0, 255, 0, 0.7); /* Dimmed placeholder color */
         }
         textarea:focus {
             outline: none;
-            border-color: #00ccff; /* Lighter border on focus */
-            box-shadow: 0 0 15px rgba(0, 204, 255, 0.8); /* Enhanced glow */
+            border-color: #00cc00; /* Lighter green border on focus */
+            box-shadow: 0 0 15px rgba(0, 204, 0, 0.8); /* Enhanced green glow */
         }
         .glitch {
             animation: glitch-title 1s infinite; /* Glitch animation for title */
@@ -66,22 +66,22 @@
             font-size: 16px;
             margin: 10px;
             cursor: pointer;
-            border: 2px solid #00ffcc; /* Light teal border */
+            border: 2px solid #00ff00; /* Light green border */
             border-radius: 5px;
             background-color: #1a1a1a; /* Matching dark background */
-            color: #00ffcc; /* Bright teal text */
+            color: #00ff00; /* Bright green text */
             transition: background 0.3s, color 0.3s, transform 0.2s, box-shadow 0.2s; /* Smooth transitions */
-            box-shadow: 0 3px 10px rgba(0, 204, 255, 0.5); /* Box shadow */
+            box-shadow: 0 3px 10px rgba(0, 255, 0, 0.5); /* Green box shadow */
         }
         input[type=button]:hover {
-            background-color: #00ffcc; /* Button background changes on hover */
+            background-color: #00ff00; /* Button background changes to green on hover */
             color: black; /* Black text on hover */
             transform: translateY(-2px); /* Lifting effect during hover */
-            box-shadow: 0 6px 20px rgba(0, 204, 255, 0.8); /* Enhanced shadow on hover */
+            box-shadow: 0 6px 20px rgba(0, 255, 0, 0.8); /* Enhanced green shadow on hover */
         }
         .terminal {
             margin: 20px 0;
-            border-left: 4px solid #00ffcc; /* Bold left border to mimic terminal */
+            border-left: 4px solid #00ff00; /* Bold left border to mimic terminal */
             padding-left: 15px;
             text-align: left;
         }
